Fixed navbar on mobile.

--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -30,6 +30,10 @@ a {
   padding-bottom: 8rem;
 }
 
+.collapse.navbar-collapse {
+  display: flex;
+  justify-content: end;
+}
 
 /* 1. Forms */
 #request-form {
@@ -127,6 +131,12 @@ p#answer {
 
 @media only screen and (max-width: 768px) {
   /* For mobile phones: */
+
+  .navbar-nav a {
+    color: black;
+  }
+
+
   .footer {
     display: none;
   }
